--- a/SalesPlat-Auto/SalesPlat-Auto.csproj
+++ b/SalesPlat-Auto/SalesPlat-Auto.csproj
@@ -164,6 +164,10 @@
     <Content Include="AddCustomer.aspx" />
     <Content Include="AddSalesMan.aspx" />
     <Content Include="AddStock.aspx" />
+    <Content Include="App_Data\SalesPlat-Auto.mdf" />
+    <Content Include="App_Data\SalesPlat-Auto_log.ldf">
+      <DependentUpon>SalesPlat-Auto.mdf</DependentUpon>
+    </Content>
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -214,8 +218,12 @@
     <Content Include="SelectStock.aspx" />
     <Content Include="Site.Master" />
     <Content Include="ViewSwitcher.ascx" />
-    <Content Include="Web.config" />
-    <Content Include="Bundle.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Bundle.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Site.Mobile.Master" />
@@ -441,9 +449,7 @@
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
