--- a/SalesPlat-Auto/Web.config
+++ b/SalesPlat-Auto/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SalesPlat-Auto-20141030110300.mdf;Initial Catalog=aspnet-SalesPlat-Auto-20141030110300;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="SalesPlatform-AutoConnectionString" connectionString="Data Source=JDEARHAM-LAPTOP\SQLEXPRESS;Initial Catalog=SalesPlatform-Auto;Integrated Security=True"
+    <add name="ConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\SalesPlat-Auto.mdf;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
